Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-8037

Compile error on Windows, Visual Studio 2017

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • qpid-cpp-1.36.0
    • qpid-cpp-1.37.0
    • C++ Broker
    • Fedora 25

    Description

      Compile error on Windows using Visual Studio 2017:

      'auto_ptr' is not a member of 'std'
      

      in project msclfs_store.

      Other similar errors in the same module

      Attachments

        Activity

          People

            chug Charles E. Rolke
            chug Charles E. Rolke
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: