QPID-8037: Compile error on Visual Studio 2017: auto_ptr definition